# sysc3010-project-l1-g8

./: FANSDeployment.drawio  README.md  pyproject.toml
.github/workflows/: black.yml  flake8.yml
WeeklyUpdates/Week10/: Grant_Achuzia_week10.md  Javeria_Sohail_week10.md  Matteo_Golin_week10.md  Saja_Fawagreh_week10.md
WeeklyUpdates/Week11/: Grant_Achuzia_week11.md  Javeria_Sohail_week11.md  Matteo_Golin_week11.md  Saja_Fawagreh_week11.md
WeeklyUpdates/Week12/: Grant_Achuzia_week12.md  Matteo_Golin_week12.md  Saja_Fawagreh_week12.md  javeria_sohail_week12.md
WeeklyUpdates/Week3/: Grant_Achuzia_week3.md  Javeria_Sohail_week3.md  Matteo_Golin_week3.md  Saja_Fawagreh_week3.md
WeeklyUpdates/Week4/: Grant_Achuzia_Week4.md  Javeria_Sohail_ Week4.md  Saja_Fawagreh_week4.md
WeeklyUpdates/Week5/: Grant_Achuzia_Week5.md  Javeria_Sohail_week5.md  Matteo_Golin_week5.md  Saja_Fawagreh_week5.md
WeeklyUpdates/Week6/: Grant_Achuzia_Week6.md  Javeria_Sohail_week6.md  Matteo_Golin_week6.md  Saja_Fawagreh_week6.md
alarm-system/: .gitignore  main.py  messages.py  requirements.txt  states.py
docs/final-report/: .gitignore  (+2 more)
haptic-alarm/: .gitignore  main.py  requirements.txt
haptic_alarm/: haptic_alarm.py  haptic_buzzer.py
notifier/: .gitignore  FANS.db  email_notification.py  email_notification_system.py  main.py  messages.py  requirements.txt  template.py  test.py
pico_alarm/: pico_haptic_alarm.py  pico_web_server.py
sensor-pi/: .gitignore  main.py  messages.py  requirements.txt  settings.py  smoke_sensor.py
web-app/: .gitignore  app.py  main.py  requirements.txt
(+79 files in other folders)
